# live-bootcamp-project

./: README.md  compose.yml
auth-service/: Cargo.toml
auth-service/src/: domain.rs  lib.rs  main.rs  services.rs  utils.rs
auth-service/src/app_state/: state.rs
auth-service/src/domain/: data_stores.rs  email.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  hashset_banned_token_store.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
