[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "cookies"] }
fake = { version = "4.4.0", features = ["derive"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"